#--------------------------------------------------------------------------------------------------
# Json11
#--------------------------------------------------------------------------------------------------
cmake_minimum_required (VERSION 3.10.2)
#--------------------------------------------------------------------------------------------------
cmake_policy(SET CMP0048 NEW)
project(json11 VERSION 1.0.0 LANGUAGES CXX)

#--------------------------------------------------------------------------------------------------

add_library(
    json11
    json11.cpp
    )

#--------------------------------------------------------------------------------------------------

target_include_directories(
    json11

    PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}
    )

#--------------------------------------------------------------------------------------------------

target_compile_options(
    json11
    PRIVATE
    $<$<C_COMPILER_ID:GNU>:-fPIC -fno-rtti -fno-exceptions -Wall>
    $<$<CXX_COMPILER_ID:MSVC>:/W4 /wd4514> # Ignore VSC warning C4514
    )

#--------------------------------------------------------------------------------------------------
